# DICE-Deployment-Cloudify

./: .gitignore  .gitreview  .update-copyright.conf  README.md  README.rst  api.html  dependencies.yaml  developing.html  genindex.html  index.html  objects.inv  openstack.yaml  quickstart.html  release-notes.txt  requirements-dev.txt  requirements.in  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  templates.html
_sources/: developing.rst.txt  index.rst.txt  quickstart.rst.txt
_sources/api/: aws.rst.txt  base.rst.txt  cassandra.rst.txt  fco.rst.txt  hadoop.rst.txt  host.rst.txt  kafka.rst.txt  misc.rst.txt  mongo.rst.txt  (+7 more)
_static/: alabaster.css
api/: aws.html  base.html  cassandra.html  fco.html  hadoop.html  host.html  kafka.html  misc.html  mongo.html  monitoring.html  openstack.html  platform.html  scylla.html  spark.html  storm.html  zookeeper.html
dice_plugin/: __init__.py  aws.py  fco.py  general.py  openstack.py  utils.py
doc/: Makefile  conf.py  index.rst  quickstart.rst  templates.rst
examples/: cassandra.yaml  hello-fco.yaml  hello-openstack.yaml  inputs-fco.yaml  inputs-openstack.yaml  spark.yaml  storm.yaml  zookeeper.yaml
scripts/: configure_hosts.sh  configure_zookeeper.sh  connect_storm_to_nimbus.sh  connect_storm_to_zookeeper.sh  connect_zookeeper_servers.sh  start_zookeeper_service.sh
templates/: cassandra.html  hadoop.html  kafka.html  mongo.html  script.html  spark.html  storm.html  zookeeper.html
tools/: extract-api-docs.py  gen-plugin-yaml.py
types/: dice-flexiant.yaml  dice-openstack.yaml  dice.yaml
(+58 files in other folders)
