[metadata]
name = dice-plugin
author = XLAB d.o.o.
author-email = pypi@xlab.si
summary = DICE TOSCA Library
description-file = README.rst
home-page = https://github.com/dice-project/DICE-Deployment-Cloudify
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    dice_plugin

[build_sphinx]
builders = html
source-dir = doc/source
build-dir = doc/build
all_files = 1

[wheel]
universal = 1

[pbr]
warnerrors = true
